2.0.0 M1
 * Removed CassandraSqlContext and underscore based options (SPARKC-399)
 * Upgrade to Spark 2.0.0-preview (SPARKC-396)
    - Removed Twitter demo because there is no spark-streaming-twitter package available anymore
    - Removed Akka Actor demo becaues there is no support for such streams anymore
    - Bring back Kafka project and make it compile
    - Update several classes to use our Logging instead of Spark Logging because Spark Logging became private
    - Update few components and tests to make them work with Spark 2.0.0
    - Fix Spark SQL - temporarily
    - Update plugins and Scala version

1.6.0
 * SparkSql write supports TTL per row (SPARKC-345)
 * Make Repartition by Cassandra Replica Deterministic (SPARKC-278)
 * Improved performance by caching converters and Java driver codecs 
   (SPARKC-383)
 * Added support for driver.LocalDate (SPARKC-385)
 * Accept predicates with indexed partition columns (SPARKC-348)
 * Retry schema checks to avoid Java Driver debouncing (SPARKC-379)
 * Fix compatibility with Cassandra 2.1.X with Single Partitions/In queries 
   (SPARKC-376)
 * Use executeAsync while joining with C* table (SPARKC-233)
 * Fix support for C* Tuples in Dataframes (SPARKC-357)

1.6.0 M2
 * Performance improvement: keyBy creates an RDD with CassandraPartitioner 
   so shuffling can be avoided in many cases, e.g. when keyBy is followed
   by groupByKey or join (SPARKC-330)
 * Improved exception message when data frame is to be saved in 
   non-empty Cassandra table (SPARKC-338)
 * Support for Joda time for Cassandra date type (SPARKC-342)
 * Don't double resolve the paths for port locks in embedded C* 
   (contribution by crakjie)
 * Drop indices that cannot be used in predicate pushdown (SPARKC-347)
 * Added support for IF NOT EXISTS (SPARKC-362)
 * Nested Optional Case Class can be save as UDT (SPARKC-346)
 * Merged Java API into main module (SPARKC-335)
 * Upgraded to Spark 1.6.1 (SPARKC-344)